--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/FName" />
 
     <EditText
-        android:id="@+id/Phone"
+        android:id="@+id/phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -57,7 +57,7 @@
         android:hint="mail@gmail/yahoo.com"
         android:inputType="textEmailAddress"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Phone" />
+        app:layout_constraintTop_toBottomOf="@+id/phone" />
 
     <EditText
         android:id="@+id/Address"
@@ -108,4 +108,5 @@
         android:text="sign in"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/conPass" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
