--- a/app/src/main/res/layout/fragment_stakes.xml
+++ b/app/src/main/res/layout/fragment_stakes.xml
@@ -20,17 +20,17 @@
             android:id="@+id/dth"
             android:layout_width="217dp"
             android:layout_height="40dp"
+            android:text="Details"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="24sp"
-            tools:text="Details" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/cst"
             android:layout_width="130dp"
             android:layout_height="40dp"
+            android:text="Cost"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="24sp"
-            tools:text="Cost" />
+            android:textSize="24sp" />
     </LinearLayout>
 
     <ListView
