--- a/app/src/main/res/layout/stakes_adapter_layout.xml
+++ b/app/src/main/res/layout/stakes_adapter_layout.xml
@@ -13,11 +13,11 @@
         android:layout_marginStart="14dp"
         android:layout_marginLeft="14dp"
         android:layout_marginTop="24dp"
+        android:text="Details"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Details" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/costL"
@@ -26,9 +26,9 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="24dp"
+        android:text="Cost"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/detailsL"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Cost" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
