--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/nav_head"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="160dp"
     android:background="?attr/colorPrimaryDark"
     android:gravity="bottom"
-    android:orientation="horizontal"
+    android:orientation="vertical"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:padding="10dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="25dp"
-        android:layout_height="match_parent"
-        android:id="@+id/head_img"/>
+    <ImageView
+
+        android:id="@+id/nav_head_img"
+        android:layout_width="64dp"
+        android:layout_height="64dp" />
 
     <TextView
+        android:id="@+id/nav_head_textv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Header"
