--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical">
 
             <include
-                layout="@layout/toolbar"
+                layout="@layout/app_bar_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -31,7 +31,7 @@
         </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
-            android:id="@+id/drawer"
+            android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:headerLayout="@layout/nav_header"
