--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -3,7 +3,7 @@
 
     <group android:checkableBehavior="none">
         <item
-            android:id="@+id/nw_d"
+            android:id="@+id/new_d"
             android:icon="@drawable/ic_baseline_add_circle_outline_24"
             android:title="new" />
         <item
